--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "next-themes": "^0.2.1",
     "query-string": "^8.1.0",
     "react": "^18",
+    "react-credit-cards-2": "^1.0.1",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.47.0",
