--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
     "emoji-mart": "^5.5.2",
+    "i18next": "^23.6.0",
     "livekit-client": "^1.14.2",
     "livekit-server-sdk": "^1.2.7",
     "lucide-react": "^0.288.0",
     "next": "13.5.6",
+    "next-i18next": "^15.0.0",
     "next-themes": "^0.2.1",
     "query-string": "^8.1.0",
     "react": "^18",
